# ShaneCollect

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/shanecollect/: app.py  version.py
src/shanecollect/setting/: .env.dev  .env.test  config.py
